# SMPL-JAX

./: .gitignore  .gitmodules  ARCHITECTURE.md  README.md  env.yaml  pyproject.toml  test.py  test.sh
benchmarks/: benchmark_runtime.py  plot_benchmark_results.py  plot_cvpr.py  run_jax_guarded.sh
benchmarks/results/: benchmark_dashboard.html  benchmark_m4_cpu.json  benchmark_m4_metal.json  benchmark_m4_metal_pjrt.json  benchmark_report.html
benchmarks/results/batch8192/: all_methods_float32_fresh.json  benchmark_dashboard.html  combined.json
benchmarks/results/cpu/: benchmark_results.json  benchmark_results_mac.json
benchmarks/results/rtx5080/: benchmark_results.json  jax_only_mem_under12gb.json
smpl_jax/: __init__.py  _base.py  blend_shapes.py  inverse_lbs.py  kinematics.py  lbs.py  model_io.py  rotations.py  smpl.py  smplx.py  types.py
tests/: conftest.py  test_blend_shapes.py  test_forward.py  test_inverse_lbs.py  test_kinematics.py  test_rotations.py
