[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "smpl-jax"
version = "0.1.0"
description = "Fully differentiable, JIT-compiled SMPL and SMPL-X in JAX"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "jax>=0.4.30",
    "optax>=0.1.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["smpl_jax*"]
